module-system/sov-modules-macros/tests/rpc/expose_rpc_first_generic_not_spec.stderr
error[E0220]: associated type `Storage` not found for `T`
  --> tests/rpc/expose_rpc_first_generic_not_spec.rs:98:1
   |
98 | #[expose_rpc]
   | ^^^^^^^^^^^^^ associated type `Storage` not found
   |
   = note: this error originates in the attribute macro `expose_rpc` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `T: sov_modules_api::Spec` is not satisfied
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:101:16
    |
101 | struct Runtime<T: TestSpec, S: Spec> {
    |                ^ the trait `sov_modules_api::Spec` is not implemented for `T`
    |
note: required by a bound in `sov_modules_api::Genesis::Spec`
   --> $WORKSPACE/module-system/sov-modules-core/src/module/mod.rs
    |
    |     type Spec: Spec;
    |                ^^^^ required by this bound in `Genesis::Spec`
help: consider further restricting this bound
    |
101 | struct Runtime<T: TestSpec + sov_modules_api::Spec, S: Spec> {
    |                            +++++++++++++++++++++++

error[E0277]: `<T as TestSpec>::Data` cannot be shared between threads safely
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:101:8
    |
101 | struct Runtime<T: TestSpec, S: Spec> {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `<T as TestSpec>::Data` cannot be shared between threads safely
    |
    = help: within `Runtime<T, S>`, the trait `std::marker::Sync` is not implemented for `<T as TestSpec>::Data`, which is required by `Runtime<T, S>: std::marker::Sync`
    = note: required because it appears within the type `(<T as TestSpec>::Data, sov_modules_api::namespaces::User)`
note: required because it appears within the type `PhantomData<(<T as TestSpec>::Data, sov_modules_api::namespaces::User)>`
   --> $RUST/core/src/marker.rs
    |
    | pub struct PhantomData<T: ?Sized>;
    |            ^^^^^^^^^^^
note: required because it appears within the type `sov_modules_api::containers::value::NamespacedStateValue<sov_modules_api::namespaces::User, <T as TestSpec>::Data>`
   --> $WORKSPACE/module-system/sov-modules-api/src/containers/value.rs
    |
    | pub struct NamespacedStateValue<N, V, Codec = BorshCodec> {
    |            ^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `QueryModule<S, <T as TestSpec>::Data>`
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:33:16
    |
33  |     pub struct QueryModule<S: Spec, D: Data> {
    |                ^^^^^^^^^^^
note: required because it appears within the type `Runtime<T, S>`
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:101:8
    |
101 | struct Runtime<T: TestSpec, S: Spec> {
    |        ^^^^^^^
note: required by a bound in `sov_modules_api::DispatchCall`
   --> $WORKSPACE/module-system/sov-modules-core/src/module/dispatch.rs
    |
    | pub trait DispatchCall: Send + Sync {
    |                                ^^^^ required by this bound in `DispatchCall`
help: consider further restricting the associated type
    |
101 | struct Runtime<T: TestSpec, S: Spec> where <T as TestSpec>::Data: std::marker::Sync {
    |                                      ++++++++++++++++++++++++++++++++++++++++++++++

error[E0277]: `<T as TestSpec>::Data` cannot be sent between threads safely
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:101:8
    |
101 | struct Runtime<T: TestSpec, S: Spec> {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `<T as TestSpec>::Data` cannot be sent between threads safely
    |
    = help: within `Runtime<T, S>`, the trait `Send` is not implemented for `<T as TestSpec>::Data`, which is required by `Runtime<T, S>: Send`
    = note: required because it appears within the type `(<T as TestSpec>::Data, sov_modules_api::namespaces::User)`
note: required because it appears within the type `PhantomData<(<T as TestSpec>::Data, sov_modules_api::namespaces::User)>`
   --> $RUST/core/src/marker.rs
    |
    | pub struct PhantomData<T: ?Sized>;
    |            ^^^^^^^^^^^
note: required because it appears within the type `sov_modules_api::containers::value::NamespacedStateValue<sov_modules_api::namespaces::User, <T as TestSpec>::Data>`
   --> $WORKSPACE/module-system/sov-modules-api/src/containers/value.rs
    |
    | pub struct NamespacedStateValue<N, V, Codec = BorshCodec> {
    |            ^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `QueryModule<S, <T as TestSpec>::Data>`
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:33:16
    |
33  |     pub struct QueryModule<S: Spec, D: Data> {
    |                ^^^^^^^^^^^
note: required because it appears within the type `Runtime<T, S>`
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:101:8
    |
101 | struct Runtime<T: TestSpec, S: Spec> {
    |        ^^^^^^^
note: required by a bound in `sov_modules_api::DispatchCall`
   --> $WORKSPACE/module-system/sov-modules-core/src/module/dispatch.rs
    |
    | pub trait DispatchCall: Send + Sync {
    |                         ^^^^ required by this bound in `DispatchCall`
help: consider further restricting the associated type
    |
101 | struct Runtime<T: TestSpec, S: Spec> where <T as TestSpec>::Data: Send {
    |                                      +++++++++++++++++++++++++++++++++

error[E0277]: the trait bound `T: sov_modules_api::Spec` is not satisfied
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:101:16
    |
101 | struct Runtime<T: TestSpec, S: Spec> {
    |                ^ the trait `sov_modules_api::Spec` is not implemented for `T`
    |
note: required by a bound in `sov_modules_api::DispatchCall::Spec`
   --> $WORKSPACE/module-system/sov-modules-core/src/module/dispatch.rs
    |
    |     type Spec: Spec;
    |                ^^^^ required by this bound in `DispatchCall::Spec`
help: consider further restricting this bound
    |
101 | struct Runtime<T: TestSpec + sov_modules_api::Spec, S: Spec> {
    |                            +++++++++++++++++++++++

error[E0277]: `<T as TestSpec>::Data` cannot be shared between threads safely
  --> tests/rpc/expose_rpc_first_generic_not_spec.rs:99:28
   |
99 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
   |                            ^^^^^^^^^^^^ `<T as TestSpec>::Data` cannot be shared between threads safely
   |
   = help: within `RuntimeCall<T, S>`, the trait `std::marker::Sync` is not implemented for `<T as TestSpec>::Data`, which is required by `RuntimeCall<T, S>: std::marker::Sync`
note: required because it appears within the type `RuntimeCall<T, S>`
  --> tests/rpc/expose_rpc_first_generic_not_spec.rs:99:28
   |
99 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
   |                            ^^^^^^^^^^^^
note: required by a bound in `sov_modules_api::DispatchCall::Decodable`
  --> $WORKSPACE/module-system/sov-modules-core/src/module/dispatch.rs
   |
   |     type Decodable: Send + Sync;
   |                            ^^^^ required by this bound in `DispatchCall::Decodable`
   = note: this error originates in the derive macro `DispatchCall` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting the associated type
   |
101| struct Runtime<T: TestSpec, S: Spec> where <T as TestSpec>::Data: std::marker::Sync {
   |                                      ++++++++++++++++++++++++++++++++++++++++++++++

error[E0277]: `<T as TestSpec>::Data` cannot be sent between threads safely
  --> tests/rpc/expose_rpc_first_generic_not_spec.rs:99:28
   |
99 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
   |                            ^^^^^^^^^^^^ `<T as TestSpec>::Data` cannot be sent between threads safely
   |
   = help: within `RuntimeCall<T, S>`, the trait `Send` is not implemented for `<T as TestSpec>::Data`, which is required by `RuntimeCall<T, S>: Send`
note: required because it appears within the type `RuntimeCall<T, S>`
  --> tests/rpc/expose_rpc_first_generic_not_spec.rs:99:28
   |
99 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
   |                            ^^^^^^^^^^^^
note: required by a bound in `sov_modules_api::DispatchCall::Decodable`
  --> $WORKSPACE/module-system/sov-modules-core/src/module/dispatch.rs
   |
   |     type Decodable: Send + Sync;
   |                     ^^^^ required by this bound in `DispatchCall::Decodable`
   = note: this error originates in the derive macro `DispatchCall` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting the associated type
   |
101| struct Runtime<T: TestSpec, S: Spec> where <T as TestSpec>::Data: Send {
   |                                      +++++++++++++++++++++++++++++++++

error[E0277]: the trait bound `T: sov_modules_api::Spec` is not satisfied
  --> tests/rpc/expose_rpc_first_generic_not_spec.rs:98:1
   |
98 | #[expose_rpc]
   | ^^^^^^^^^^^^^ the trait `sov_modules_api::Spec` is not implemented for `T`
   |
   = note: this error originates in the attribute macro `expose_rpc` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
   |
101| struct Runtime<T: TestSpec + sov_modules_api::Spec, S: Spec> {
   |                            +++++++++++++++++++++++

error[E0053]: method `get_working_set` has an incompatible type for trait
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:98:1
    |
98  | #[expose_rpc]
    | ^^^^^^^^^^^^^
    | |
    | expected type parameter `S`, found type parameter `T`
    | help: change the output type to match the trait: `sov_modules_api::WorkingSet<S>`
...
101 | struct Runtime<T: TestSpec, S: Spec> {
    |                -            - expected type parameter
    |                |
    |                found type parameter
    |
note: type in trait
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:88:57
    |
88  |             pub fn query_value(&self, working_set: &mut WorkingSet<S>) -> RpcResult<QueryResponse> {
    |                                                         ^^^^^^^^^^^^^
    = note: expected signature `fn(&RpcStorage<_, _>) -> sov_modules_api::WorkingSet<S>`
               found signature `fn(&RpcStorage<_, _>) -> sov_modules_api::WorkingSet<T>`
    = note: a type parameter was expected, but a different one was found; you might be missing a type parameter or trait bound
    = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters
    = note: this error originates in the attribute macro `expose_rpc` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `T: sov_modules_api::Spec` is not satisfied
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:99:19
    |
99  | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |                   ^^^^^^^ the trait `sov_modules_api::Spec` is not implemented for `T`
    |
note: required by a bound in `sov_modules_api::WorkingSet`
   --> $WORKSPACE/module-system/sov-modules-core/src/storage/scratchpad.rs
    |
    | pub struct WorkingSet<S: Spec> {
    |                          ^^^^ required by this bound in `WorkingSet`
    = note: this error originates in the derive macro `Genesis` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
    |
101 | struct Runtime<T: TestSpec + sov_modules_api::Spec, S: Spec> {
    |                            +++++++++++++++++++++++

error[E0277]: the trait bound `T: sov_modules_api::Spec` is not satisfied
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:99:28
    |
99  | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |                            ^^^^^^^^^^^^ the trait `sov_modules_api::Spec` is not implemented for `T`
    |
note: required by a bound in `sov_modules_api::WorkingSet`
   --> $WORKSPACE/module-system/sov-modules-core/src/storage/scratchpad.rs
    |
    | pub struct WorkingSet<S: Spec> {
    |                          ^^^^ required by this bound in `WorkingSet`
    = note: this error originates in the derive macro `DispatchCall` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
    |
101 | struct Runtime<T: TestSpec + sov_modules_api::Spec, S: Spec> {
    |                            +++++++++++++++++++++++

error[E0277]: the trait bound `T: sov_modules_api::Spec` is not satisfied
   --> tests/rpc/expose_rpc_first_generic_not_spec.rs:98:1
    |
98  | #[expose_rpc]
    | ^^^^^^^^^^^^^ the trait `sov_modules_api::Spec` is not implemented for `T`
    |
note: required by a bound in `sov_modules_api::WorkingSet`
   --> $WORKSPACE/module-system/sov-modules-core/src/storage/scratchpad.rs
    |
    | pub struct WorkingSet<S: Spec> {
    |                          ^^^^ required by this bound in `WorkingSet`
    = note: this error originates in the attribute macro `expose_rpc` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
    |
101 | struct Runtime<T: TestSpec + sov_modules_api::Spec, S: Spec> {
    |                            +++++++++++++++++++++++
